--- a/lib/web/templates/permit/new.html.eex
+++ b/lib/web/templates/permit/new.html.eex
@@ -1,4 +1,4 @@
-<div class="w-full max-w-lg pt-16 mx-auto content-center flex-1">
-  <h1 class="c-h3 p-5 text-gray-darker"><%= gettext("Create permit") %></h1>
+<div class="content-center flex-1 w-full max-w-lg pt-4 mx-auto">
+  <h1 class="p-5 c-h3 text-gray-darker"><%= gettext("Create permit") %></h1>
   <%= render "form.html", Map.put(assigns, :action, Routes.permit_path(@conn, :create)) %>
 </div>
