--- a/lib/web/templates/layout/components/nav.html.eex
+++ b/lib/web/templates/layout/components/nav.html.eex
@@ -1,5 +1,7 @@
 <nav id="header" class="fixed top-0 z-30 w-full toggleColour <%= @text_color %>">
-  <div class="container flex flex-wrap items-center justify-between w-full py-2 mx-auto mt-0">
+  <div x-data="{navOpen: false}" 
+       @keydown.escape="navOpen = false" 
+       class="container flex flex-wrap items-center justify-between w-full py-2 mx-auto mt-0">
     <div class="flex items-center pl-4">
       <a class="text-2xl font-bold no-underline hover:no-underline lg:text-4xl"  href="<%= Routes.page_path(@conn, :index) %>">
         <%= img_tag(Routes.static_path(@conn, "/images/logo.svg"), class: "h-8 fill-current inline") %>
@@ -11,11 +13,26 @@
       </a>
     </div>
     <div class="block pr-4 lg:hidden">
-      <button id="nav-toggle" class="flex items-center px-3 py-2 bg-transparent border rounded appearance-none hover:bg-transparent text-gray-medium border-gray-medium hover:text-gray-darker hover:border-teal-500 focus:outline-none">
-        <svg class="w-3 h-3 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+      <button @click="navOpen = !navOpen" 
+        type="button" 
+        :class="{ 'transition transform-180': navOpen }"
+        class="flex items-center px-3 py-2 bg-transparent border rounded appearance-none hover:bg-transparent text-gray-medium border-gray-medium hover:text-gray-darker hover:border-teal-500 focus:outline-none">
+        <svg class="w-6 h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path x-show="navOpen" fill-rule="evenodd" clip-rule="evenodd" d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z"/>
+          <path x-show="!navOpen" fill-rule="evenodd" d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"/>
+        </svg>
       </button>
     </div>
-    <div class="z-20 flex-grow hidden w-full p-4 mt-2 bg-white lg:flex lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent lg:p-0" id="nav-content">
+    <div :class="{ 'block shadow-3xl': navOpen, 'hidden': !navOpen }"
+         @click.away="navOpen = false"
+         x-show="true"
+         x-transition:enter="ease-out duration-200"
+         x-transition:enter-start="opacity-0 transform"
+         x-transition:enter-end="opacity-100 transform"
+         x-transition:leave="ease-in duration-200"
+         x-transition:leave-start="opacity-100 transform"
+         x-transition:leave-end="opacity-0 transform"
+         class="z-20 flex-grow w-full p-4 mt-2 bg-white lg:flex lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent lg:p-0">
       <ul class="items-center justify-end flex-1 list-reset lg:flex">
         <li class="mr-3">
           <%= link gettext("Permits"), to: Routes.permit_path(@conn, :index), class: "inline-block font-bold no-underline hover:text-underline py-2 px-4" %>
