upgrade phoenix to 1.5

--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -11,7 +11,7 @@
         <%= render "components/flash.html", type: type, message: message %>
       <% end) %>
       </div>
-    <%= render @view_module, @view_template, assigns %>
+    <%= @inner_content %>
     <%= render "components/footer.html", conn: @conn %>
     <script type="text/javascript" src="<%=Routes.static_path(@conn, "/js/app.js") %>"></script>
     <!-- loads per page html - check /views/permit.view.eex  or add template -->
