remove old user route

--- a/lib/web/templates/admin/user/show.html.eex
+++ b/lib/web/templates/admin/user/show.html.eex
@@ -26,10 +26,8 @@
       </p>
     </div>
     <div class="flex justify-between">
-      <%= link gettext("Back"), to: Routes.user_path(@conn, :index), class: "bg-transparent hover:bg-primary-light text-primary-medium font-semibold hover:text-white py-2 px-4 border border-primary-medium hover:border-transparent rounded" %>
-      <%= link gettext("Edit"), to: Routes.user_path(@conn, :edit, @user), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
+      <%= link gettext("Back"), to: Routes.admin_user_path(@conn, :index), class: "bg-transparent hover:bg-primary-light text-primary-medium font-semibold hover:text-white py-2 px-4 border border-primary-medium hover:border-transparent rounded" %>
+      <%= link gettext("Edit"), to: Routes.admin_user_path(@conn, :edit, @user), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
     </div>
   </div>
 </div>
-
-
