--- a/lib/web/templates/admin/user/form.html.eex
+++ b/lib/web/templates/admin/user/form.html.eex
@@ -43,7 +43,7 @@
   <%= error_tag f, :password_confirmation %>
 
   <div class="flex justify-between">
-    <%= link gettext("Back"), to: Routes.user_path(@conn, :index), class: "bg-transparent hover:bg-primary-light text-primary-medium font-semibold hover:text-white py-2 px-4 border border-primary-medium hover:border-transparent rounded" %>
+    <%= link gettext("Back"), to: Routes.admin_user_path(@conn, :index), class: "bg-transparent hover:bg-primary-light text-primary-medium font-semibold hover:text-white py-2 px-4 border border-primary-medium hover:border-transparent rounded" %>
     <%= submit gettext("Save"), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
   </div>
 <% end %>
