--- a/lib/web/templates/admin/user/form.html.eex
+++ b/lib/web/templates/admin/user/form.html.eex
@@ -1,9 +1,9 @@
 <%= form_for @changeset, @action, [class: "bg-white w-full shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
   <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p><%= gettext("Oops, something went wrong! Please check the errors below") %></p>
-      <p><%= @changeset.action %></p>
-    </div>
+  <div class="px-4 py-3 border-t border-b text-grey-darker border-warning-darker bg-warning-light" role="alert">
+    <p class="font-bold"><%= gettext("Oops, something went wrong!") %></p>
+    <p class="text-sm"><%= gettext("Please check the errors below") %></p>
+  </div>
   <% end %>
 
   <%= label f, :email, class: "block mb-6 c-h5 text-gray-darker" do %>
@@ -29,6 +29,12 @@
   <%= text_input f, :phone, class: "form-input w-full mt-1"  %>
   <% end %>
   <%= error_tag f, :phone %>
+  
+  <%= label f, :current_password, class: "block mb-6 c-h5 text-gray-darker mb-6" do  %>
+    <span class="block form-label"><%= gettext("Current Password") %></span>
+  <%= password_input f, :current_password, class: "form-input w-full mt-1" %>
+  <% end %>
+  <%= error_tag f, :current_password %>
 
   <%= label f, :password, class: "block mb-6 c-h5 text-gray-darker mb-6" do  %>
     <span class="block form-label"><%= gettext("Password") %></span>
